P8/kibana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: kibana-svc
  name: kibana-svc
spec:
  type: ClusterIP
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5601
  selector:
    app: kibana
    release: kibana
